# Machine-Learning-Operation

./: .gitignore  Procfile  README.md  requirements.txt
poetry/: README.md  __init__.py  app.py  data.dvc  flask.py  gunicorn.py  gunicorn_config.py  main.py  pyproject.toml  requirements.txt  wsgi.py
poetry/config/: main.yaml
poetry/config/model/: gb.pkl  rf.pkl  rf_model.pkl
poetry/data/cleaned/: medical_cleaned.csv
poetry/notebooks/hdb/: EDA.ipynb  HDB model dev.ipynb  gb.pkl  information.txt
poetry/notebooks/hdb/mlruns/0/: meta.yaml
poetry/notebooks/hdb/mlruns/896967221174660757/: meta.yaml
poetry/notebooks/hdb/mlruns/896967221174660757/0c3f3df4ea274648a0c08d3f7f4713c8/: meta.yaml
poetry/notebooks/hdb/mlruns/896967221174660757/18ad841032e740c8b26fb6e3870a2b1a/: meta.yaml
poetry/notebooks/hdb/mlruns/896967221174660757/199b1a9ae5b6494ea4e2c895787b6ee0/: meta.yaml
poetry/notebooks/hdb/mlruns/896967221174660757/1b23f38c193c4f93828bf69d22f33080/: meta.yaml
poetry/notebooks/hdb/mlruns/896967221174660757/1e64749340f7448eb797bcfa4bbd2df4/: meta.yaml
poetry/notebooks/hdb/mlruns/896967221174660757/1f39fd5e143045a8a2757ae464eecdff/: meta.yaml
poetry/notebooks/medical/: EDA.ipynb  Pycaret model development.ipynb
poetry/pythonFiles/: forms.py  hdb_model.py  medical_model.py
poetry/src/: process.py
poetry/static/: hdb.css  home.css  medical.css
poetry/templates/: base.html  home.html
poetry/templates/hdb/: hdb.html
poetry/templates/medical/: medical_form.html
(+594 files in other folders)
